[package]
name = "markdown-table"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
description = "Creating markdown tables with Rust!"
documentation = "https://github.com/Xithrius/markdown-table-rs"
homepage = "https://github.com/Xithrius/markdown-table-rs"
repository = "https://github.com/Xithrius/markdown-table-rs"
license = "MIT OR Apache-2.0"
keywords = ["table", "markdown"]
categories = ["utilities"]

[dependencies]
anyhow = "1.0.56"
pad = "0.1.6"
